# cpp-practise-app

./: .gitpod.yml  CMakeLists.txt  README.md  build.sh  configure.sh  hello_test.cc  run.sh
